--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,11 +17,11 @@
 </head>
 <body>
   <div class='container'>
-    <div class='card-panel yellow darken-1 col s12'>
+    <div class='card-panel purple lighten-2 col s12'>
       <section class='center-align'>
       <h1><i class="medium material-icons">person_pin</i> Friend Finder</h1>
       <h4>Answer a few questions to meet your new best friend!</h4><br>
-      <a href='/survey' class="waves-effect waves-light btn cyan lighten-1"><i class="material-icons left">comment</i>Take Survey</a>
+      <a href='/survey' class="waves-effect waves-light btn orange darken-1"><i class="material-icons left">comment</i>Take Survey</a>
       </section>
     </div>
     <div class='col s4'>
