--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class='container'>
-        <div class='card-panel purple lighten-2 col s12 center-align'>
+        <div class='card-panel amber darken-3 col s12 center-align'>
             <h4><strong>Survey Questions</strong></h4>
             <div class='card-panel left-align white'>
                 <h5><strong>About You</strong></h5>
@@ -130,7 +130,7 @@
                 </select>
                 <br>
                 <!-- Materialize Modal Trigger/Submit Button -->
-                <button type ="submit" data-target="modal1" class="waves-effect waves-light btn modal-trigger orange darken-1" id="submitBtn">Submit</button>
+                <button type ="submit" data-target="modal1" class="waves-effect waves-light btn modal-trigger cyan lighten-2" id="submitBtn">Submit</button>
             </div>
         </div>
         <div class='col s4'>
@@ -145,7 +145,7 @@
             <img id="matchPic" src="" alt="No Image" width = 250px>
           </div>
         <div class="modal-footer">
-          <a href="results" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
+          <a href="results" class=" modal-action modal-close waves-effect waves-green btn-flat cyan lighten-2">Done</a>
         </div>
       </div>
 
